igw.tf
#IGW File
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "Terra-IGW"
  }
}
